test_files/.deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-new-service
  labels:
      app: my-new-service
spec:
  selector:
    app: my-new-service
  ports:
    - name: http
      port: 8000
