test_files/.deploy/base/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
    name: my-new-service
spec:
  hosts:
  - '*'
  gateways:
  - my-gateway
  http:
  - match:
    - uri:
        prefix: /my/endpoint
    route:
    - destination:
        host: my-new-service
        port:
          number: 8000
